fix UI collapsed sidebar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,15 +77,7 @@
   backdrop-filter: saturate(120%) blur(1px);
 }
 
-.item-center {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 /* lucide icon custom */
 .lucide {
-  width: 20px;
-  height: 20px;
   stroke-width: 1px;
 }
